Final_push_before_test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coalition FrontEnd Developer</title>
+    <title>Coalition FrontEnd Developer DineshG</title>
     <link rel="stylesheet" href="./dist/styles.css" />
     <link rel="Icon" href="./asserts/favicon.png" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
